--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 <body>
   <h1>Hello from Git!</h1>
   <p>This is my first page hosted on Git.</p>
+  <section>
+    <h2>About Me</h2>
+    <p>This is my first GitHub project and I’m learning Git!</p>
+  </section>
 </body>
 </html>
